--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    <p>Done by <a href="https://github.com/S-Y-A-N/">S-Y-A-N</a> | <a href="https://github.com/S-Y-A-N/uob-student-nationalities">Source Code</a></p>
+    <p>Done by <a href="https://github.com/S-Y-A-N/">S-Y-A-N</a> | <a href="https://github.com/S-Y-A-N/itcs333-a3">Source Code</a></p>
   </footer>
 </body>
 
